--- a/static/index.html
+++ b/static/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <elements-api
-        apiDescriptionUrl="/openapi.yaml"
+        apiDescriptionUrl="/docs/swagger.yaml"
         router="hash"
         layout="sidebar"
 />
